# tap-bitso

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
.github/workflows/: release.yaml  test.yaml  test.yml
tap_bitso/: auth.py  client.py  streams.py  tap.py
