[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-bitso"
description = "`tap-bitso` is a Singer tap for Bitso, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "Bitso",
  "ELT",
  "meltano-sdk",
  "singer.io",
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "requests~=2.33.0",
  "singer-sdk~=0.54.0a4",
  "stamina~=25.2.0",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.license]
file = "LICENSE"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
"tap-bitso" = "tap_bitso.tap:TapBitso.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-bitso#readme"
Homepage = "https://github.com/reservoir-data/tap-bitso"
Repository = "https://github.com/reservoir-data/tap-bitso"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=7.4",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.17",
  "ty>=0.0.1a17",
  "types-requests",
]

[tool.hatch]
[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.5.19"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812",
  "DJ",
  "FIX002",
  "ISC001",
  "PD",
]
per-file-ignores."tests/*" = [
  "ANN201",
]
unfixable = [
  "ERA001",
]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
addopts = [ "-vvv", "-ra" ]
filterwarnings = [ "error" ]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
min_version = "4.43"
requires = [ "tox", "tox-uv" ]
env_list = [
  "dependencies",
  "typing",
  { product = [
    { prefix = "3.", start = 12 },
  ] },
]
[tool.tox.env]
dependencies.dependency_groups = [ "testing" ]
dependencies.commands = [ [ "deptry", "." ] ]
sync.commands = [ [ "tap-bitso", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]
typing.dependency_groups = [ "testing", "typing" ]
typing.commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_bitso", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_bitso", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_BITSO_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"
