[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-bitso"
description = "`tap-bitso` is a Singer tap for Bitso, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "Bitso",
  "ELT",
  "meltano-sdk",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "requests~=2.34.0",
  "singer-sdk~=0.54.2",
  "stamina~=26.1.0",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-bitso = "tap_bitso.tap:TapBitso.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-bitso#readme"
Homepage = "https://github.com/reservoir-data/tap-bitso"
Repository = "https://github.com/reservoir-data/tap-bitso"

[dependency-groups]
dev = [
  "deptry>=0.25.1",
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "pytest>=9",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=2.1",
  "ty>=0.0.42",
]

[tool.hatch]
[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.11"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812",
  "DJ",
  "FIX002",
  "ISC001",
  "PD",
]
per-file-ignores."tests/*" = [
  "ANN201",
]
unfixable = [
  "ERA001",
]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_unused_configs = true

[tool.ty.rules]
missing-override-decorator = "error"
unused-type-ignore-comment = "ignore"

[tool.pytest]
addopts = [ "-v", "-ra" ]
filterwarnings = [ "error" ]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
requires = [ "tox>=4.55", "tox-uv>=1.35" ]
env_list = [
  "dependencies",
  "typing",
  { prefix = "3.", start = 12 },
]
[tool.tox.env.dependencies]
description = "check for unused, missing and transitive dependencies"
dependency_groups = [ "dev" ]
commands = [ [ "deptry", "." ] ]
[tool.tox.env.sync]
description = "run tap with sample data"
commands = [ [ "tap-bitso", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]
base_python_file = [ ".python-version" ]
[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_bitso", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_bitso", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "run tests on Python {py_dot_ver}"
dependency_groups = [ "testing" ]
pass_env = [ "TAP_BITSO_*" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
